@@ -565,6 +565,11 @@ L<Bric::Biz::Asset::Template|Bric::Biz::Asset::Template> now works as
 expected, returning the latest version of all stories regardless of their
 publish status, rather than no stories at all (Bug #1). [David]
 
+=item *
+
+Alert type rules can once again be deleted from the UI. Thanks to Scott for
+the report (Bug #81). [David]
+
 =back
 
 =head1 Version 1.11.1 (2008-10-03)
